package com.travelplanner.common.enums;

public enum BriefingType {
    SAFE,
    WARNING
}
