package com.travelplanner.common.enums;

public enum OAuthProvider {
    GOOGLE,
    APPLE
}
