package com.travelplanner.common.enums;

public enum TripStatus {
    ACTIVE,
    COMPLETED,
    CANCELLED
}
